# crnn

./: .gitignore  LICENSE  Readme.md  freeze.yml  requirements.txt
crnn_jittor/: .gitignore  adadelta.py  converter.py  dataset.py  dataset_test.py  main.py  model.py  test_ctcloss.py  transformer.py  utils.py
demo/: .gitignore  CMakeLists.txt  main.cpp  readme.md
jittorz/: .gitignore  adadelta.py  dataset.py  main.py  model.py  modeltf.py  pos.py  transformer.py  utils.py
tool/: create_dataset.py  dataset.py
tools/: a.py  create_dataset.py  create_dataset_ic03.py  create_dataset_ic13.py  create_dataset_iiit5k.py  create_dataset_svt.py  dataset.py  utlis.py
torch/: .gitignore  convert.py  dataset.py  main.py  model.py  train.sh
